backups/infra/4-ingress-monitoring/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 8080
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
